# fastapi_project

./: .env  .gitignore  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/api/v1/: auth.py  tasks.py  users.py
app/db/: database.py
app/db/migrations/: env.py
app/db/migrations/versions/: 83cf3daeb80e_initial_migration.py  879cbc64c7ad_initial_migration.py  88867f05768e_revoked_tokens_table.py
app/db/models/: auth.py  tasks.py  users.py
app/depends/: tasks.py  users.py
app/schemas/: auth.py  tasks.py  users.py
app/schemas/tasks/: tasks.py
app/schemas/users/: users.py
app/utils/: auth.py  enums.py  etc.py
tests/: test_views.py
